--- a/metaproject/package.json
+++ b/metaproject/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "eventbus.js": "^0.1.0",
     "flexboxgrid-sass": "^8.0.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
