--- a/metaproject/package.json
+++ b/metaproject/package.json
@@ -12,6 +12,7 @@
     "eventbus.js": "^0.1.0",
     "flexboxgrid-sass": "^8.0.5",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
